--- a/index.html
+++ b/index.html
@@ -3,9 +3,49 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Andrés Vásquez | Enlaces</title>
-  <meta name="description" content="Proyectos, música, enlaces y contacto de Andrés Vásquez (Andrestoteles).">
+  <title>Andrés Vásquez (Andrestoteles) | Artista, Ingeniero IT y Proyectos en Panamá</title>
+  <meta name="description" content="Sitio oficial de Andrés Vásquez (Andrestoteles), ingeniero en informática y artista. Música, proyectos tecnológicos, Solutech Panamá, jingles comerciales y enlaces oficiales.">
   <link rel="canonical" href="https://vasquezandres.net/">
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Andrés Vásquez (Andrestoteles) | Sitio Oficial">
+  <meta property="og:description" content="Música, proyectos tecnológicos, Solutech Panamá y enlaces oficiales de Andrés Vásquez.">
+  <meta property="og:url" content="https://vasquezandres.net/">
+  <meta property="og:image" content="https://cdn.solutechcloud.com/vsqz/andres.webp">
+  <meta property="og:locale" content="es_PA">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Andrés Vásquez (Andrestoteles)">
+  <meta name="twitter:description" content="Ingeniero IT y artista. Música, proyectos y enlaces oficiales.">
+  <meta name="twitter:image" content="https://cdn.solutechcloud.com/vsqz/andres.webp">
+
+  <!-- Font Awesome -->
+  <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        referrerpolicy="no-referrer">
+  <!-- Favicon opcional y manifest si ya los tienes -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <meta name="theme-color" content="#19162d">
+  <!-- Favicon estándar -->
+  <link rel="icon" type="image/x-icon" href="/icons/favicon.ico">
+  <!-- PNGs para navegadores modernos -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
+  <!-- iPhone / iPad -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
+  <!-- Safari (Pinned Tab en macOS) -->
+  <link rel="mask-icon" href="/icons/safari-pinned-tab.svg" color="#19162d">
+  <!-- Color de la barra en móviles -->
+  <meta name="theme-color" content="#19162d">
+  <link rel="stylesheet" href="assets/styles.css">
+  <meta name="robots" content="index, follow, max-image-preview:large">
+
+  <link rel="alternate" hreflang="es" href="https://vasquezandres.net/">
+  <link rel="alternate" hreflang="en" href="https://vasquezandres.net/?lang=en">
+
 
   <!-- Google tag (GA4) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-6XEDXZLWRE"></script>
@@ -16,35 +56,37 @@
     gtag('config', 'G-6XEDXZLWRE');
   </script>
 
-  <!-- Font Awesome -->
-  <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-        referrerpolicy="no-referrer">
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Andrés Vásquez",
+    "alternateName": "Andrestoteles",
+    "url": "https://vasquezandres.net/",
+    "image": "https://cdn.solutechcloud.com/vsqz/andres.webp",
+    "sameAs": [
+      "https://www.instagram.com/andresvasquez90",
+      "https://x.com/VasquezAndres90",
+      "https://www.youtube.com/@andrestoteles",
+      "https://open.spotify.com/intl-es/artist/12JBtVm7IlbA7SSPCjLL40",
+      "https://andrestoteles.com",
+      "https://solutech.com.pa",
+      "https://solutechcloud.com"
+    ],
+    "jobTitle": "Ingeniero en Informática y Artista",
+    "worksFor": {
+      "@type": "Organization",
+      "name": "Solutech Panamá",
+      "url": "https://solutech.com.pa"
+    },
+    "nationality": "Venezolano",
+    "address": {
+      "@type": "PostalAddress",
+      "addressCountry": "Panamá"
+    }
+  }
+  </script>
 
-  <!-- Favicon opcional y manifest si ya los tienes -->
-  <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
-  <link rel="manifest" href="/site.webmanifest">
-  <meta name="theme-color" content="#19162d">
-
-  <!-- Favicon estándar -->
-  <link rel="icon" type="image/x-icon" href="/icons/favicon.ico">
-
-  <!-- PNGs para navegadores modernos -->
-  <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
-
-  <!-- iPhone / iPad -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
-
-  <!-- Safari (Pinned Tab en macOS) -->
-  <link rel="mask-icon" href="/icons/safari-pinned-tab.svg" color="#19162d">
-
-  <!-- Color de la barra en móviles -->
-  <meta name="theme-color" content="#19162d">
-
-
-
-  <link rel="stylesheet" href="assets/styles.css">
 </head>
 <body>
 
@@ -59,9 +101,9 @@
       <div class="avatar-wrap">
         <img class="avatar"
           src="https://cdn.solutechcloud.com/vsqz/andres.webp"
-          alt="Andrés Vásquez">
+          alt="Andrés Vásquez - Andrestoteles, ingeniero IT y artista">
       </div>
-      <h1>Andrés Vásquez</h1>
+      <h1>Andrés Vásquez (Andrestoteles)</h1>
       <p class="tagline">Proyectos, música, enlaces y contacto.</p>
 
       <!-- Redes debajo del nombre -->
@@ -260,6 +302,9 @@
         </a>
       </div>
     </section>
+
+
+
   </main>
 
   <footer class="footer">
